ifc-macros/test/pass_high_mut_to_fn.stderr
error: Cannot pass high expression as an argument to functions
 --> $DIR/pass_high_mut_to_fn.rs:9:9
  |
9 |         inc(x);
  |         ^^^^^^
  |
help: High Expression
 --> $DIR/pass_high_mut_to_fn.rs:9:13
  |
9 |         inc(x);
  |             ^
